--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -25,12 +25,12 @@
     <parent>
         <groupId>io.undertow</groupId>
         <artifactId>undertow-parent</artifactId>
-        <version>2.1.4.Final-SNAPSHOT</version>
+        <version>2.1.4.MKOPECKY.EMPTY</version>
     </parent>
 
     <groupId>io.undertow</groupId>
     <artifactId>undertow-servlet</artifactId>
-    <version>2.1.4.Final-SNAPSHOT</version>
+    <version>2.1.4.MKOPECKY.EMPTY</version>
 
     <name>Undertow Servlet</name>
 
